--- a/son/Views/Shared/LayoutTeacher.cshtml
+++ b/son/Views/Shared/LayoutTeacher.cshtml
@@ -37,7 +37,7 @@
                         <div class="navbar-brand-box">
                             <a href="index.html" class="logo logo-dark">
                                 <span class="logo-sm">
-                                    <img src="~/assets/images/btec.png" alt=""  style="height: 50px;width: 50px;">
+                                    <img src="~/assets/images/btec.png"  style="height: 50px;width: 50px;">
                                 </span>
                                 <span class="logo-lg">
                                     <img src="~/assets/images/btec.png" alt="" height="17">
@@ -242,7 +242,7 @@
                     <div id="sidebar-menu">
                         <!-- Left Menu Start -->
                         <ul class="metismenu list-unstyled" id="side-menu">
-                            <li class="menu-title">Main</li>
+                            <li class="menu-title">Teacher</li>
 
                             <li>
                                 <a href="javascript: void(0);" class="waves-effect">
