--- a/son/Views/Shared/LayoutStudent.cshtml
+++ b/son/Views/Shared/LayoutStudent.cshtml
@@ -365,6 +365,7 @@
     </div>
     <!-- /Right-bar -->
     <!-- Right bar overlay-->
+    @RenderSection("Scripts", required: false)
     <div class="rightbar-overlay"></div>
 
     <!-- JAVASCRIPT -->
