--- a/son/Views/Students/ChangePassword.cshtml
+++ b/son/Views/Students/ChangePassword.cshtml
@@ -24,9 +24,18 @@
 <link rel="stylesheet" type="text/css" href="~/css/until1.css">
 <link rel="stylesheet" type="text/css" href="~/css/main1.css">
 
+
 <meta name="robots" content="noindex, follow">
 </head>
 <body>
+
+    <style>
+        .body {
+            font-family: Rubik, sans-serif !important;
+        }
+    </style>
+
+
     <div class="container-login100 d-flex justify-content-center align-items-center vh-100">
         <div class="limiter">
             <div class="container-login100">
